--- a/content/vrmonitor/translations/vrmonitor_errors_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_greek.txt
@@ -547,9 +547,9 @@
 "[english]Popover_NoSteamWarning_Description"	"Make sure Steam is installed and running."
 "Popover_NoSteamWarning_Action"	"Εκκίνηση του Steam"
 "[english]Popover_NoSteamWarning_Action"	"Start Steam"
-"Popover_FirmwareUpdateNeededWarning_Header"	"Μη ενημερωμένο firmware"
+"Popover_FirmwareUpdateNeededWarning_Header"	"Μη ενημερωμένο υλικολογισμικό"
 "[english]Popover_FirmwareUpdateNeededWarning_Header"	"Firmware out of date"
-"Popover_FirmwareUpdateNeededWarning_Description"	"Το firmware σας είναι παλαιότερης έκδοσης, παρακαλούμε ενημερώστε το για να εξασφαλίσετε ότι η συσκευή σας λειτουργεί σωστά."
+"Popover_FirmwareUpdateNeededWarning_Description"	"Το υλικολογισμικό σας είναι παλαιότερης έκδοσης, παρακαλούμε ενημερώστε το για να εξασφαλίσετε ότι η συσκευή σας λειτουργεί σωστά."
 "[english]Popover_FirmwareUpdateNeededWarning_Description"	"Your firmware is out of date, please update it to ensure your device works correctly."
 "Popover_FirmwareUpdateNeededWarning_Action"	"Αντιμετώπιση προβλημάτων"
 "[english]Popover_FirmwareUpdateNeededWarning_Action"	"Troubleshooting"
@@ -677,7 +677,7 @@
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Description"	"Some displays seemed to be set to mirror its content. This might impact your graphics performance, or renders the headset display unusable."
 "Warning_DismissableWarning_UnknownHardwareDetected_Header"	"Εντοπίστηκε άγνωστο υλισμικό"
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Header"	"Unknown Hardware Detected"
-"Warning_DismissableWarning_UnknownHardwareDetected_Description"	"Το αρχείο manifest του firmware δεν έχει καταχωρήσεις για ορισμένο υλισμικό που εντοπίστηκε."
+"Warning_DismissableWarning_UnknownHardwareDetected_Description"	"Το αρχείο manifest του υλικολογισμικού δεν έχει καταχωρήσεις για ορισμένο υλισμικό που εντοπίστηκε."
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Description"	"The firmware manifest has no entries for some of the detected hardware."
 "Warning_DismissableWarning_WindowsAeroDisabled_Header"	"Το Windows Aero είναι απενεργοποιημένο"
 "[english]Warning_DismissableWarning_WindowsAeroDisabled_Header"	"Windows Aero disabled"
@@ -827,9 +827,9 @@
 "[english]Popover_LowBattery_Tracker_Description"	"This tracker is connected and tracking but the battery is low."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Ο στοιχειοθέτης απέρριψε την αρχικοποίηση"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Compositor Rejected Initialization"
-"VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Το headset σας εντοπίστηκε, άλλα απαιτεί μια υποχρεωτική ενημέρωση firmware για να διασφαλιστεί η σωστή λειτουργία του."
+"VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Το headset σας εντοπίστηκε, άλλα απαιτεί μια υποχρεωτική ενημέρωση υλικολογισμικού για να διασφαλιστεί η σωστή λειτουργία του."
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires a mandatory firmware update to ensure correct operation."
-"VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Ενημέρωση firmware"
+"VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Ενημέρωση υλικολογισμικού"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Firmware"
 }
 }
