--- a/content/vrmonitor/translations/vrmonitor_errors_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_thai.txt
@@ -675,7 +675,7 @@
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Header"	"Mirroring Displays"
 "Warning_DismissableWarning_SomeDisplaysAreMirroring_Description"	"บางจอแสดงผลดูเหมือนว่าถูกกำหนดเป็นหน้าจอเสมือนของเนื้อหา นี่อาจส่งผลกระทบถึงประสิทธิภาพของกราฟฟิกของคุณ หรือการเรนเดอร์ของจอแสดงผลของเครื่องสวมศีรษะอาจไม่สามารถใช้งานได้"
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Description"	"Some displays seemed to be set to mirror its content. This might impact your graphics performance, or renders the headset display unusable."
-"Warning_DismissableWarning_UnknownHardwareDetected_Header"	"ฮาร์ดแวร์ที่ไม่รู้จักถูกตรวจพบ"
+"Warning_DismissableWarning_UnknownHardwareDetected_Header"	"ตรวจพบฮาร์ดแวร์ที่ไม่รู้จัก"
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Header"	"Unknown Hardware Detected"
 "Warning_DismissableWarning_UnknownHardwareDetected_Description"	"มานิเฟสต์ของเฟิร์มแวร์ไม่มีข้อมูลบันทึกสำหรับฮาร์ดแวร์บางอย่างที่ตรวจพบ"
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Description"	"The firmware manifest has no entries for some of the detected hardware."
@@ -795,7 +795,7 @@
 "[english]Warning_DismissableWarning_IssuesWithTwoDongles_Action"	"Troubleshooting"
 "VRInitError_Driver_HmdDisplayMirrored_Header"	"เครื่องสวมศีรษะแสดงผลเป็นหน้าจอเสมือน"
 "[english]VRInitError_Driver_HmdDisplayMirrored_Header"	"Headset display mirrored"
-"VRInitError_Driver_HmdDisplayMirrored_Description"	"ไม่พบจอแสดงผลของเครื่องสวมศีรษะ แต่พบหน้าจอเสมือน กรุณาตั้งค่า HMD เป็นแบบขยายแทนการตั้งค่าแบบเสมือน"
+"VRInitError_Driver_HmdDisplayMirrored_Description"	"ไม่พบจอแสดงผลของเครื่องสวมศีรษะ แต่ตรวจพบหน้าจอเสมือน กรุณาตั้งค่าหน้าจอสวมศีรษะเป็นแบบขยายแทนการตั้งค่าแบบเสมือน"
 "[english]VRInitError_Driver_HmdDisplayMirrored_Description"	"The headset's display was not found, but a mirrored display was detected.  Please set the HMD to extended rather than mirrored."
 "VRInitError_Driver_HmdDisplayMirrored_FirstAction"	"เปิดคุณสมบัติการแสดงผล"
 "[english]VRInitError_Driver_HmdDisplayMirrored_FirstAction"	"Open Display Properties"
@@ -829,5 +829,15 @@
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires a mandatory firmware update to ensure correct operation."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"อัปเดตเฟิร์มแวร์"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Firmware"
+"Popover_LowBattery_HMD_Header"	"หน้าจอสวมศีรษะพร้อมใช้งานด้วยแบตเตอร์รี่ระดับต่ำ"
+"[english]Popover_LowBattery_HMD_Header"	"HMD ready with low battery"
+"Popover_LowBattery_HMD_Description"	"หน้าจอสวมศีรษะนี้เชื่อมต่อแล้วและกำลังติดตาม แต่แบตเตอรี่อยู่ในระดับต่ำ"
+"[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
+"VRInitError_Compositor_UnableToCreateDevice_Header"	"ตัวประสานการทำงานไม่สามารถสร้างอุปกรณ์ได้"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor Unable to Create Device"
+"VRInitError_Compositor_UnableToCreateDevice_Description"	"ตัวประสานการทำงานไม่สามารถสร้างอุปกรณ์กราฟิกส์ในส่วนของขั้นตอนการเริ่มต้นได้"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
+"VRInitError_Compositor_UnableToCreateDevice_Action"	"การแก้ไขปัญหา"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
 }
 }
