--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -1949,5 +1949,7 @@
 "[english]Settings_NightModeCheck"	"Night Mode"
 "Settings_NightModeDesc"	"La modalità notturna attenua la luminosità del visore fino alle 5 del mattino (o fino al riavvio di SteamVR)."
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
+"Settings_PauseOnStandby"	"Sospendi il rendering mentre il visore è inattivo"
+"[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 }
 }
