--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -1925,6 +1925,8 @@
 "[english]BugReporter_PreviewReport"	"Preview Report"
 "BugReporter_IncludeReportAndLogs"	"Incluir relatório e registros do sistema"
 "[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
+"BugReporter_IncludeCrashDumps"	"Incluir relatórios de erro"
+"[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
 "BugReporter_SubjectRequired"	"Por favor, insira um assunto."
 "[english]BugReporter_SubjectRequired"	"Please supply a subject."
 "BugReporter_DescriptionRequired"	"Por favor, insira uma descrição."
@@ -1935,12 +1937,18 @@
 "[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
 "BugReporter_SubmissionSuccess"	"Envio concluído.\n\nObrigado."
 "[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
+"BugReporter_SubmissionFailure"	"Falha no envio.\n\nO coletor de bugs pode estar ocupado. Por favor, tente enviar novamente.\n\nErro: %1\n"
+"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
+"BugReporter_PreviewReportTitle"	"Relatar um bug — Pré-visualizar relatório"
+"[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"Enviando..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
 "BugReporter_SubmissionTimeout"	"Falha no envio.\n\nA rede está demorando mais do que o esperado para enviar. Por favor, tente novamente mais tarde.\n"
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"Enviando...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
+"Settings_HomeAppCheck"	"Central do SteamVR (Beta)"
+"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
 "Settings_HomeAppDesc"	"A nova experiência do SteamVR apresenta espaços mais ricos, recursos sociais e mais. Este recurso está em beta; diga-nos o que achou nos fóruns!"
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Modo noturno"
