--- a/content/vrmonitor/translations/vrmonitor_errors_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_danish.txt
@@ -833,5 +833,17 @@
 "[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
 "VRInitError_Compositor_UnableToCreateDevice_Action"	"Fejlfinding"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Basisstation uanvendelig"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Der er opstået et internt problem (fejl 06) i en basisstation. Genstart venligst basisstationen, hvis lysindikator blinker rødt. Hvis den forbliver i samme tilstand, bedes du kontakte producenten for at få hjælp."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"Besøg htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Basisstation uanvendelig"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Der er opstået et internt problem (fejl 07) i en basisstation. Genstart venligst basisstationen, hvis lysindikator blinker rødt. Hvis den forbliver i samme tilstand, bedes du kontakte producenten for at få hjælp."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"Besøg htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
 }
 }
